--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -90,9 +90,20 @@
   max-width: 150rem;
   padding-left: 5vw;
   display: flex;
+  height: 3rem;
   align-items: baseline;
   position: absolute;
   top: 0;
+  transition: all .7s;
+
+  &.expanded {
+    width: 100%;
+    height: 30rem;
+    font-size: 2rem;
+    background-color: rgba(0,0,0, 1);
+    padding-left: 0;
+    justify-content: center;
+  }
 
   &__brand {
     color: $font-color-secondary;
@@ -102,6 +113,23 @@
     @media (max-width: $bp-small) {
       font-size: 3rem;
      }
+    &.rotate {
+      animation: rotate 2s forwards;
+    }
+  }
+
+  & .fa-hamburger {
+    font-size: 3rem;
+    color: $font-color-secondary;
+    margin-left: auto;
+    margin-right: 2rem;
+    display: none;
+    cursor: pointer;
+    transition: all .3s;
+
+    @media (max-width: $bp-small) {
+      display: block;
+     }
   }
 
   &__nav {
@@ -109,6 +137,11 @@
     display: flex;
     list-style: none;
 
+    &.mobile {
+      flex-direction: column;
+      display: block;
+
+    }
    //TODO: MENU
     @media (max-width: $bp-small) {
       display: none;
@@ -122,6 +155,16 @@
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
+    border-bottom: 1px solid transparent;
+    padding-bottom: .2rem;
+    transition: border-bottom .3s;
+
+    &:hover {
+      border-bottom: 1px solid $font-color-secondary;
+    }
+    @media (max-width: $bp-small) {
+      font-size: 3rem;
+     }
   }
 
 
@@ -152,3 +195,13 @@
    }
 }
 
+@keyframes rotate {
+  0%  {
+    transform: rotate(0deg);
+  }
+
+  100% {
+
+    transform: rotate(-90deg) translateX(-10rem);
+  }
+}
