--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ h4 {
     @media (max-width: 51.5em) {
       .header__heading-box {
         padding: 15vh 0 0 0; } }
+
+@-moz-document url-prefix() {
+  .header__heading-box {
+    background: none; } }
   .header__heading {
     width: 80rem;
     letter-spacing: 4px;
@@ -92,6 +96,10 @@ h4 {
     color: transparent;
     font-family: "peace_sansregular", sans-serif;
     font-weight: 400; }
+
+@-moz-document url-prefix() {
+  .header__heading {
+    color: #c5c5c5; } }
     @media (max-width: 51.5em) {
       .header__heading {
         width: 100%;
